Updated '_i18n/pt/_posts/api-cielo/2003-03-03-Split.md' via CloudCannon

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
@@ -71,14 +71,10 @@ O **Marketplace**, de conhecimento destas taxas, negociará o seu **MDR(%)** e u
 O desconto da **Tarifa Fixa(R$)**, acordado entre o **Marketplace** e a **Braspag**, não é aplicado no valor total da transação, não entrando no cálculo da divisão e sim sendo debitado do montante que o **Marketplace** tem para receber junto à **Braspag**. O **MDR(%)** entra no cálculo de divisão da transação, já que o mesmo deve estar embutido no **MDR(%)** acordado entre o **Marketplace** e seus **Subordinados.**
 
 > **Custo para o Marketplace:** MDR Braspag(%) + Tarifa Fixa(R$)
-
 > O **MDR(%)** acordado entre um **Marketplace** e um **Subordinado** deve ser sempre maior que o **MDR(%)** acordado entre a **Braspag** e o **Marketplace**. 
-
-<BR>
 
 ### Marketplace
 
-<BR>
 O **Marketplace** é responsável por acordar as taxas a serem cobradas de seus **Subordinados**, onde deve ser defindo um **MDR(%)** maior ou igual ao **MDR(%)** definido entre a **Braspag** e o **Marketplace** e uma **Tarifa Fixa(R$)**, que é opcional. 
 
 > **Custo para o Subordinado:** MDR Marketplace(%) + Tarifa Fixa(R$), onde no MDR Marketplace(%) está embutido o MDR Braspag(%).
@@ -139,7 +135,8 @@ A autorização de uma transação no Split de Pagamentos deve ser realizada atr
 
 Porém, para indentificar que a transação enviada se trata de uma transação de Split de Pagamentos, deve-se modificar o tipo de pagamento utilizado, conforme abaixo:
 
-|                     | **Cartão de Crédito**  | **Cartão de Débito**  | 
+|=                     | **Cartão de Crédito** | **Cartão de Débito**  | 
+|---------------------|------------------------|-----------------------|
 | **Transação Comum** | CreditCard             | DebitCard             |
 | **Transação Split** | SplittedCreditCard     | SplittedDebitCard     |
 
@@ -151,6 +148,7 @@ Porém, para indentificar que a transação enviada se trata de uma transação 
 > * Boleto
 
 Exemplo:
+
 ```
 {
    "MerchantOrderId":"2014111703",
@@ -340,6 +338,7 @@ Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
 **Taxa Marketplace com o Subordinado 02**: 4% MDR, já embutindo os 2% do MDR Braspag + 0,15 Tarifa Fixa.  
 
 `REQUEST`
+
 ```
 {
    "MerchantOrderId":"2014111703",
@@ -382,6 +381,7 @@ Transação no valor de **R$100,00** com o nó contendo as regras de divisão.
 ```
 
 `RESPONSE`
+
 ```
 {
     "MerchantOrderId": "2014111706",
@@ -504,6 +504,7 @@ Para obter um token de acesso:
 3. Realize uma requisição ao servidor de autorização:  
 
 `REQUEST`  
+
 ```
 POST https://{OAUTH2 Server}/oauth2/token  
 --header "Authorization: Basic {base64}"  
@@ -512,13 +513,15 @@ grant_type=client_credentials
 ```
 
 `RESPONSE`
-````
+
+```
 {
     "access_token": "eyJ0eXAiOiJKV1QiLCJhbG.....WE1igNAQRuHAs",
     "token_type": "bearer",
     "expires_in": 1199
 }
 ```
+
 > O ClientId é o mesmo utilizado na integração com a API Cielo E-Commerce, conhecido como MerchantId. O ClientSecret deve ser obtido junto à Braspag.
 
 O token retornado (access_token) deverá ser utilizado em toda requisição à API do Split como uma chave de autorização. O mesmo possui uma validade de 20 minutos e deverá ser obtido um novo token toda vez que o mesmo expirar.  
@@ -526,10 +529,12 @@ O token retornado (access_token) deverá ser utilizado em toda requisição à A
 Com o token de acesso, é possível realizar um requisição à API do Split para enviar as regras de divisão de uma transação.  
 
 `REQUEST`  
+
 ```
 PUT https://{API Split}/api/transactions/{PaymentId}/split
 --header "Authorization: Bearer {token}"
 ```
+
 ```
 [
     {
@@ -551,7 +556,8 @@ PUT https://{API Split}/api/transactions/{PaymentId}/split
 ]
 ```
 
-`RESPONSE`   
+`RESPONSE`
+   
 ```
 [
     {
@@ -613,6 +619,7 @@ GET https://{API Cielo E-Commerce (consulta)}/1/sales/{PaymentId}
 ```
 
 `RESPONSE`
+
 ```
 {
     "MerchantOrderId": "2014111706",
@@ -708,7 +715,8 @@ Ao capturar uma transação do Split de Pagamentos o **Marketplace** deve inform
 
 Na captura total de uma transação, o somatório dos valores de participação de cada subordinado deverá ser igual ao valor total da transação enviado no momento da autorização.
 
-`REQUEST`  
+`REQUEST`
+
 ```
 PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture
 {
@@ -733,7 +741,8 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture
 }
 ```
 
-`RESPONSE`  
+`RESPONSE`
+
 ```
 {
     "Status": 2,
@@ -802,7 +811,8 @@ Exemplo considerando transação no valor de **R$100,00** e as seguinte taxas:
 
 Na captura parcial de uma transação, o somatório dos valores de participação de cada subordinado deverá ser igual ao valor total a ser capturado.
 
-`REQUEST`  
+`REQUEST`
+
 ```
 PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture?amount=8000
 {
@@ -827,7 +837,8 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/capture?amount=8000
 }
 ```
 
-`RESPONSE`  
+`RESPONSE`
+
 ```
 {
     "Status": 2,
@@ -901,12 +912,14 @@ Ao cancelar uma transação do Split de Pagamentos o **Marketplace** deve inform
 <BR>
 No cancelamento total de uma transação, será cancelado o valor total da transação e consequentemente o valor total de cada **Subordinado**.
 
-`REQUEST`  
+`REQUEST`
+
 ```
 PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void
 ```
 
 `RESPONSE`
+
 ```
 {
     "Status": 10,
@@ -939,7 +952,8 @@ No cancelamento parcial, o somatório dos valores cancelados definidos para cada
   
 Os valores cancelados serão sensibilizados nas respectivas agendas dos **Subordinados**.
 
-`REQUEST`  
+`REQUEST`
+
 ```
 PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void?amount=2000
 {
@@ -957,6 +971,7 @@ PUT https://{API Cielo E-Commerce}/1/sales/{PaymentId}/void?amount=2000
 ```
 
 `RESPONSE`
+
 ```
 {
     "Status": 2,
