Updated '_i18n/pt/_posts/api-cielo/2003-03-03-Split.md' via CloudCannon

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
@@ -26,7 +26,7 @@ Muito utilizado em Marketplaces, onde **o carrinho é composto por produtos de d
 | **Subordinado** | Fornecedor dos produtos que compõem o carrinho.<BR>Recebe parte do valor da venda, descontado o MDR\* acordado com o **Marketplace**.<BR>  |
 | **Braspag (Facilitador)** | Responsável pelo fluxo transacional.<BR> Define um MDR\* e uma Tarifa Fixa a serem descontados sobre o valor total da venda realizada pelo **Marketplace**.<br> Responsável pela liquidação dos pagamentos para os **Subordinados** e **Marketplace**.|
 
-> \***MDR**  (*Merchant Discount Rate*): Percentual a ser descontado sobre o valor de uma transação.
+> **MDR**  (*Merchant Discount Rate*): Percentual a ser descontado sobre o valor de uma transação.
 
 ## Como funciona o Split de Pagamentos?
 
@@ -142,7 +142,6 @@ Porém, para indentificar que a transação enviada se trata de uma transação 
 
 > Atualmente o Split de Pagamentos está disponivel para os seguintes tipos de pagamento:
 > * Cartão de Crédito  
-
 > Em breve estarão disponíveis:
 > * Cartão de Débito
 > * Boleto
@@ -556,7 +555,7 @@ PUT https://{API Split}/api/transactions/{PaymentId}/split
 ]
 ```
 
-`RESPONSE`
+RESPONSE
    
 ```
 [
@@ -613,7 +612,8 @@ O nó de Split de Pagamentos da API pós-transacional, no contrato de request e 
 
 Para consultar uma transação, utilize o próprio serviço de consulta da API Cielo E-Commerce.
 
-`REQUEST`  
+`REQUEST`
+
 ```
 GET https://{API Cielo E-Commerce (consulta)}/1/sales/{PaymentId}
 ```
