Updated '_i18n/pt/_posts/api-cielo/2003-03-03-Split.md' via CloudCannon

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-Split.md
@@ -14,8 +14,6 @@ language_tabs:
 
 # O que é o Split de Pagamentos ?
 
-<BR><BR>
-
 O Split de Pagamentos permite a divisão de uma transação entre diferentes participantes de uma venda.
 
 Muito utilizado em Marketplaces, onde **o carrinho é composto por produtos de diferentes fornecedores** e o valor total da venda deve ser dividido entre os participantes.
@@ -30,15 +28,13 @@ Muito utilizado em Marketplaces, onde **o carrinho é composto por produtos de d
 
 ## Como funciona o Split de Pagamentos?
 
-<BR>
-
 No Split de Pagamentos o responsável pelo fluxo transacional é o facilitador.
 
 O Marketplace se integra à Braspag para transacionar e informa como será dividida a transação entre cada participante, podendo ser no momento de captura ou em um momento posterior, conhecido como split pós-transacional, desde que seja dentro de um limite de tempo pré-estabelecido. 
 
 Com a transação capturada, a Braspag calcula o valor destinado a cada participante e repassa esses valores, no prazo estabelecido de acordo com cada produto (regime de pagamento\*), para cada envolvido na transação. 
 
-> \***Regime de Pagamento**: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<BR>
+> **Regime de Pagamento**: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<BR>
 > **Crédito**: Em até 31 dias.<BR>
 > **Crédito** Parcelado: 1º parcela em até 31 dias, demais a cada 30.<BR>
 > **Débito**: Em até 1 dia útil<BR>
@@ -58,11 +54,8 @@ O **Marketplace** também pode ser um participante da divisão. Para isso basta 
 As taxas acordadas entre os participantes, que são o **MDR(%)** e uma **Taxa Fixa(R$)**, devem ser definidas no momento do cadastro do **Marketplace** e dos seus **Subordinados** junto à Braspag.  
 
 As mesmas poderão ser enviadas no momento transacional ou pós-transacional. Caso não sejam enviadas, a **Braspag** irá considerar as taxas já cadastradas.   
-<BR>
 
 ### Braspag (Facilitador)
-
-<BR>
 
 A Braspag acordará um **MDR(%)** e uma **Tarifa Fixa(R$)** com o **Marketplace** a serem descontados em cada transação.
 
@@ -79,11 +72,8 @@ O **Marketplace** é responsável por acordar as taxas a serem cobradas de seus 
 
 > **Custo para o Subordinado:** MDR Marketplace(%) + Tarifa Fixa(R$), onde no MDR Marketplace(%) está embutido o MDR Braspag(%).
 
-<BR>
+Exemplo
 
-#### Exemplo
-
-<BR>
 Uma transação de **R$100**, realizada por um **Marketplace** com participação do **Subordinado 01**.
 
 ![Split](https://docsbraspag.github.io/SplitBraspag/images/Split/Split000.PNG)
