Updated '_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md
@@ -106,12 +106,15 @@ Sim, as credenciais utilizadas em cada plataforma são diferentes:
 
 ### Exemplos
 
-* **1.5**
-    * **Afiliação**: `1000000000`
-    * **Chave de produção**: `bf7001e4a4530004090d782b0b7d0a932d07fedffscb2332d7S3fc2b6S8f7c3c`
-* **API Cielo eCommerce**
-    * **MerchantId**: `0d8b08ab-26ea-400e-9a22-47e58057642b`
-    * **MerchantKey**: `keR10a0P3R01T0h0C0a0T00U0vsoOy0X0p0Dqyib`
+#### **1.5**
+
+* **Afiliação**: `1000000000`
+* **Chave de produção**: `bf7001e4a4530004090d782b0b7d0a932d07fedffscb2332d7S3fc2b6S8f7c3c`
+
+#### **API Cielo eCommerce**
+
+* **MerchantId**: `0d8b08ab-26ea-400e-9a22-47e58057642b`
+* **MerchantKey**: `keR10a0P3R01T0h0C0a0T00U0vsoOy0X0p0Dqyib`
 
 ## 13. Como consigo as credenciais de cada ambiente?
 
@@ -307,84 +310,86 @@ Sim, na recorrência inteligente, é possível atualizar dados de uma recorrênc
 
 ## 7. Quais são as regras para atualizar o intervalo da recorrência.
 
-* A.Se o novo dia informado for depois do atual dia de agendamento, a atualização do dia da recorrência terá efeito na próxima recorrência.
-    * Ex.: Hoje é dia 5, e a próxima recorrência é dia 25/05. Quando eu atualizar para o dia 10, a data da próxima recorrência será dia10/05.
-* B.Se o novo dia informado for antes do atual dia de agendamento, a atualização do dia da recorrência, só terá efeito depois que a próxima recorrência for executada com sucesso.
-    * Ex.: Hoje é dia 5, e a próxima recorrência é dia 25/05. Quando eu atualizar para o dia 3, a data da próxima recorrência permanecerá dia 25/05, e após ela ser executada, a próxima será agendada para o dia 03/06.
-* C.Se o novo dia informado for antes do atual dia de agendamento, mas a próxima recorrência for em outro mês, a atualização do dia da recorrência terá efeito na próxima recorrência.
-    * Ex.: Hoje é dia 5, e a próxima recorrência é dia 25/09. Quando eu atualizar para o dia 3, a data da próxima recorrência será 03/09
+**A**.Se o novo dia informado for depois do atual dia de agendamento, a atualização do dia da recorrência terá efeito na próxima recorrência.
+* Ex.: Hoje é dia 5, e a próxima recorrência é dia 25/05. Quando eu atualizar para o dia 10, a data da próxima recorrência será dia10/05.
+
+**B**.Se o novo dia informado for antes do atual dia de agendamento, a atualização do dia da recorrência, só terá efeito depois que a próxima recorrência for executada com sucesso.
+* Ex.: Hoje é dia 5, e a próxima recorrência é dia 25/05. Quando eu atualizar para o dia 3, a data da próxima recorrência permanecerá dia 25/05, e após ela ser executada, a próxima será agendada para o dia 03/06.
+
+**C**.Se o novo dia informado for antes do atual dia de agendamento, mas a próxima recorrência for em outro mês, a atualização do dia da recorrência terá efeito na próxima recorrência.
+* Ex.: Hoje é dia 5, e a próxima recorrência é dia 25/09. Quando eu atualizar para o dia 3, a data da próxima recorrência será 03/09
 
 # Tokenização/Cartão protegido
 
-## 1.	O que é a tokenização/cartão protegido da API Cielo eCommerce
+## 1.O que é a tokenização/cartão protegido da API Cielo eCommerce
 
 É uma plataforma que permite o armazenamento seguro de dados sensíveis de cartão de crédito. Estes dados são transformados em um código criptografado chamado de “token”, que poderá ser armazenado em banco de dados. Com a plataforma, a loja poderá oferecer recursos como "Compra com 1 clique” e "Retentativa de envio de transação”, sempre preservando a integridade e a confidencialidade das informações.
 
-## 2.	Quando é possível tokenizar um cartão?
+## 2.Quando é possível tokenizar um cartão?
 
 É possível tokenizar o cartão em 2 momentos:
 
 1. No envio de uma transação: Ao se agendar uma recorrência ou em uma transação normal, mas indicar no contrato técnico que deseja salvar o cartão.
 2. Utilizando o contrato de salvamento de cartão disponível na documentação tecnica
 
-## 3.	É necessário ser PCI para armazenar os Tokens?
+## 3.É necessário ser PCI para armazenar os Tokens?
 
 Não, para armazenar os tokens não é necessário ser certificado PCI
 
-## 4.	É necessário enviar o CVV para realizar uma transação somente com o token?
+## 4.É necessário enviar o CVV para realizar uma transação somente com o token?
 
 Sim, por questão de segurança, a API Cielo eCommerce exige o envio do CVV caso um token seja utilizado para transacionar.
 
 # Autenticação
 
-## 1.	O que é autenticação?
+## 1.O que é autenticação?
 
 A Autenticação é um fluxo de pagamento onde o comprador é direcionado ao banco emissor do cartão, para que o comprador seja identificado como o real portador no momento da compra
 
-## 2.	A Autenticação é obrigatória?
+## 2.A Autenticação é obrigatória?
 
 A autenticação é obrigatória apenas para cartão de débito, sendo uma opção para lojistas que desejem autenticar cartões de crédito
 
-## 3.	O redirecionamento é obrigatório?
+## 3.O redirecionamento é obrigatório?
 
 Sim, o processo de autenticação exige que o comprador seja direcionado para o ambiente do banco.
 
-## 4.	É necessário habilitar a autenticação em meu cadastro Cielo?
+## 4.É necessário habilitar a autenticação em meu cadastro Cielo?
 
 Sim, é necessário que o lojista entre em contato com o suporte cielo e solicite que sua Afiliação possa estar apta a realizar autenticações online.
 
-## 5.	Quais bandeiras podem realizar a autenticação?
+## 5.Quais bandeiras podem realizar a autenticação?
 
 Visa e Mastercard
 
 # Analise de Fraude
 
-## 1.	O que é a análise de fraude Cielo?
+## 1.O que é a análise de fraude Cielo?
 
 É uma plataforma de prevenção à fraude que fornece uma análise de risco detalhada das compras on-line. Cada transação é submetida a mais de 260 regras, além das regras específicas de cada segmento, e geram uma recomendação de risco em aproximadamente dois segundos. Este processo é totalmente transparente para o portador do cartão. De acordo com os critérios preestabelecidos, o pedido pode ser automaticamente aceito, recusado ou encaminhado para análise manual.
 
-## 2.	A análise de fraude é obrigatória?
+## 2.A análise de fraude é obrigatória?
 
 Não, a análise de fraude ocorre como um adendo ao processo de autorização de cartões de crédito. Basta que o Antifraude esteja habilitado em seu cadastro na Cielo.
 Para mais informações sobre como realizar uma análise de fraude, veja: https://developercielo.github.io/Webservice-3.0/#criando-uma-venda-com-analise-de-fraude
 
-## 3.	Caso ocorre um chargeback em uma venda analisada, serei reembolsado?
+## 3.Caso ocorre um chargeback em uma venda analisada, serei reembolsado?
 
 Não, a análise de fraude oferecida pela cielo apenas informa quais dados fogem do padrão de compra/atividades do comprador, indicando quais pontos apresentam maiores evidencias/risco de uma suposta fraude.
 A decisão de aceite da transação e sua captura são de inteira responsabilidade do lojista.
 Caso um chargeback seja realizado, a Cielo não se responsabiliza por reembolsar o lojista.
 
-## 4.	Posso utilizar um Antifraude próprio junto a API Cielo eCommerce?
+## 4.Posso utilizar um Antifraude próprio junto a API Cielo eCommerce?
 
 Não, o lojista pode apenas utilizar o próprio AF Cielo como meio de analise dentro da API Cielo eCommerce
 
 # Zero Auth
 
-## 1.	O que é o Zero Auth
+## 1.O que é o Zero Auth
 
 O Zero Auth é uma ferramenta de validação de cartões da API Cielo. A validação permite que o lojista saiba se o cartão é valido ou não antes de enviar a transação para autorização, antecipando o motivo de uma provável não autorização.
 
-## 2.	O que o Zero Auth faz?
+## 2.O que o Zero Auth faz?
 
 O Zero Auth simula uma autorização Cielo, validando dados como:
 
@@ -394,7 +399,7 @@ O Zero Auth simula uma autorização Cielo, validando dados como:
 * Se o número do cartão está correto
 * Se o CVV é valido
 
-## 3.	O que o Zero Auth não pode fazer:
+## 3.O que o Zero Auth não pode fazer:
 
 O Zero auth não informa:
 
@@ -402,20 +407,20 @@ O Zero auth não informa:
 * Informações sobre o portador
 * Informa dados sobre um cartão em especifico
 
-## 4.	Em quais cartões o Zero Auth funciona?
+## 4.Em quais cartões o Zero Auth funciona?
 
 Apenas em cartões de crédito MasterCard e Visa.
 
-## 5.	Como integrar ao Zero Auth
+## 5.Como integrar ao Zero Auth
 
 O Zerto Auth é uma feature disponibilizada penas a alguns lojistas Cielo. Para saber mais sobre o modo de integração, entre em contato com o Suporte Ecommerce Cielo.
 
 # Integração de Gateways
 
-## 1.	Utilizo um Gateway de pagamentos. Posso usar a API Cielo Ecommerce?
+## 1.Utilizo um Gateway de pagamentos. Posso usar a API Cielo Ecommerce?
 
 Sim, mas é necessarios que o seu Gateway esteja integrado a API Cielo Ecommerce e possua suas credenciais de acesso (MerchantKey e MerchantID)
 
-## 2.	Como um gateway de pagamentos pode se integrar?
+## 2.Como um gateway de pagamentos pode se integrar?
 
 Utilizando a mesma integração padrão de um lojista Cielo, entretando o Gateway precisará possuir as credenciais do lojista para poder realizar autorizações de pagamentos.
