Updated '_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md
@@ -255,12 +255,31 @@ Exemplo: Boletos não possuem retorno para confirmação de pagamento. A concili
 ## 1. Quais features precisam ser habilitadas pela Cielo para utilização na API Cielo eCommerce em produção?
 
 Por padrão, cada lojista utilizando a API Cielo eCommerce deve solicitar ao Suporte Cielo a habilitação das seguintes funcionalidades:
+
 * Recorrência
 * Antifraude
+* Zero Auth
+* Consulta Bins
+* Velocity
+* Retentativa
 
 ## 2. Quais Features estão disponíveis em sandbox?
 
-Todas as features disponíveis em produção estão disponíveis no Sandbox a exceção do portal do lojista, disponível exclusivamente em produção, no site cielo.
+Features Disponiveis em Sandbox:
+
+* Transações com todos os meios de pagamento
+* Tokenização de cartões
+* Recorrência
+* Zero Auth
+* Consulta Bins
+
+Features Não Disponiveis em Sandbox:
+
+* Antifraude
+* Velocity
+* Retentativa
+* Boletos Registrados
+* Backoffice
 
 # Recorrência
 
