--- a/_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md
+++ b/_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md
@@ -1,5 +1,6 @@
 ---
 layout: faq
+Order:4
 title: FAQ
 description: Respostas para perguntas frequentes feitas pelos desenvolvedores durante a integração com a API Cielo.
 search: true
