--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -233,6 +233,14 @@ O código do exemplo da Automação Comercial integrada com a API Order Manager 
 
 ![fluxo integração remota](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-remote-new.png)
 
+## API Docs
+
+Nessa documentação, o desenvolvedor encontra todas as informações sobre os Endpoints, Entidades e Recursos disponíveis na API.
+
+Você poderá consultar os dados de entrada, exemplos de requisição e os dados de saída. Assim como entender o fluxo básico da utilização da API Order Manager da Cielo LIO.
+
+Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.
+
 # Integração Local
 
 ## Apresentação
