--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -239,7 +239,33 @@ Nessa documentação, o desenvolvedor encontra todas as informações sobre os E
 
 Você poderá consultar os dados de entrada, exemplos de requisição e os dados de saída. Assim como entender o fluxo básico da utilização da API Order Manager da Cielo LIO.
 
+### Endpoints
+
 Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.
+
+**Sandbox**
+O ambiente de sandbox é destinado à realização de testes com parceiros da Cielo. Esse ambiente usa simuladores de integração. Assim, as operações não são executadas em ambiente produtivo.
+
+Para utilizar o ambiente de sandbox, não é necessário que você forneça o número do estabelecimento. Você poderá iniciar os testes sem a necessidade de ter uma Cielo LIO. Para obter os tokens de sandbox, crie uma conta no portal e crie o Client-Id.
+
+Utilize o endereço de sandbox abaixo para realizar os testes:
+
+> https://api.cielo.com.br/sandbox-lio/order-management/v1
+
+**Produção**
+O ambiente de produção é o ambiente transacional integrado ao ambiente da Cielo. As operações realizadas nesse ambiente não podem ser desfeitas.
+
+Para utilizar o ambiente de produção, é necessário que você entre em contato através do formulário. Juntamente com os dados pessoais, forneça o número do estabelecimento. Para utilizar o ambiente de produção, é necessário que você possua uma Cielo LIO.
+
+Utilize o endereço de produção abaixo para realizar as requisições:
+
+> https://api.cielo.com.br/order-management/v1
+
+Já fez os testes em sandbox e deseja solicitar os tokens?
+
+Clique em [Solicitar Tokens](https://desenvolvedores.cielo.com.br/api-portal/content/solicitar-tokens-para-producao) ou acesse o menu “Desenvolvedor” no Portal de Desenvolvedores e escolha a opção "Solicitar tokens”.
+
+É necessário estar logado!
 
 # Integração Local
 
