Fix API Docs - Endpoint

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -243,7 +243,7 @@ Você poderá consultar os dados de entrada, exemplos de requisição e os dados
 
 Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.
 
-**Sandbox**
+### Sandbox
 
 O ambiente de sandbox é destinado à realização de testes com parceiros da Cielo. Esse ambiente usa simuladores de integração. Assim, as operações não são executadas em ambiente produtivo.
 
@@ -253,7 +253,7 @@ Utilize o endereço de sandbox abaixo para realizar os testes:
 
 > https://api.cielo.com.br/sandbox-lio/order-management/v1
 
-**Produção**
+### Produção
 
 O ambiente de produção é o ambiente transacional integrado ao ambiente da Cielo. As operações realizadas nesse ambiente não podem ser desfeitas.
 
