Add API Docs - HTTP Headers

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -243,7 +243,7 @@ Você poderá consultar os dados de entrada, exemplos de requisição e os dados
 
 Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.
 
-### Sandbox
+#### Sandbox
 
 O ambiente de sandbox é destinado à realização de testes com parceiros da Cielo. Esse ambiente usa simuladores de integração. Assim, as operações não são executadas em ambiente produtivo.
 
@@ -253,7 +253,7 @@ Utilize o endereço de sandbox abaixo para realizar os testes:
 
 > https://api.cielo.com.br/sandbox-lio/order-management/v1
 
-### Produção
+#### Produção
 
 O ambiente de produção é o ambiente transacional integrado ao ambiente da Cielo. As operações realizadas nesse ambiente não podem ser desfeitas.
 
@@ -268,6 +268,16 @@ Já fez os testes em sandbox e deseja solicitar os tokens?
 Clique em [Solicitar Tokens](https://desenvolvedores.cielo.com.br/api-portal/content/solicitar-tokens-para-producao) ou acesse o menu “Desenvolvedor” no Portal de Desenvolvedores e escolha a opção "Solicitar tokens”.
 
 É necessário estar logado!
+
+### HTTP Headers
+
+Todas as chamadas da API Integração Remota | Cielo LIO Order Manager necessitam que as informações abaixo estejam presentes no Header na requisição:
+
+**Client-Id**: Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna “Client ID”, dentro do menu “Desenvolvedor” -> “Client ID Cadastrados”.
+
+**Access-Token**:Identificação do token de acesso, que armazena as regras de acesso permitidas ao Client ID. Sua geração ocorre no momento da criação do Client ID pelo painel do desenvolvedor. Seu valor pode ser visualizado clicando em “detalhes” na coluna “Access Tokens”, dentro do menu “Desenvolvedor” -> “Client ID Cadastrados”.
+
+**Merchant-Id**: Token que identifica o estabelecimento comercial dentro do servidor Order Manager da Cielo LIO. Sua geração ocorre durante o processo de cadastro do Client ID. Seu valor pode ser visualizado na coluna “Merchant ID”, dentro do menu “Desenvolvedor” -> “Client ID Cadastrados”.
 
 # Integração Local
 
