Fix API Docs HTTP Headers

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -279,6 +279,8 @@ Todas as chamadas da API Integração Remota | Cielo LIO Order Manager necessita
 
 **Merchant-Id**: Token que identifica o estabelecimento comercial dentro do servidor Order Manager da Cielo LIO. Sua geração ocorre durante o processo de cadastro do Client ID. Seu valor pode ser visualizado na coluna “Merchant ID”, dentro do menu “Desenvolvedor” -> “Client ID Cadastrados”.
 
+### HTTP Status Code
+
 # Integração Local
 
 ## Apresentação
