Add API Docs - HTTP Status Code

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -281,6 +281,20 @@ Todas as chamadas da API Integração Remota | Cielo LIO Order Manager necessita
 
 ### HTTP Status Code
 
+| Código  | Erro  | Descrição  |
+|---|---|---|
+| 200 |  OK | Operação realizada com sucesso.  |
+| 201 | Created  | A solicitação foi realizada, resultando na criação de um novo recurso.  |
+| 204 | Empty  |  Operação realizada com sucesso, mas nenhuma resposta foi retornada. |
+| 400  | Bad Request  |  A requisição possui parâmetro(s) inválido(s). |
+| 401  | Unauthorized  | O token de acesso não foi informado ou não possui acesso às APIs.  |
+| 403  | Forbidden  | O acesso ao recurso foi negado.  |
+| 404  | Not Found  | O recurso informado no request não foi encontrado.  |
+| 413  | Request is to Large  |  A requisição está ultrapassando o limite permitido para o perfil do seu token de acesso. |
+| 422  | Unprocessable Entity  | A requisição possui parâmetros obrigatórios não informados.  |
+| 429  | Too Many Requests  | O consumidor estourou o limite de requisições por tempo.  |
+| 500  | Internal Server Error  | Erro não esperado; algo está quebrado na API  |
+
 # Integração Local
 
 ## Apresentação
