Fix HTTP Headers API Docs

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -271,7 +271,7 @@ Clique em [Solicitar Tokens](https://desenvolvedores.cielo.com.br/api-portal/con
 
 ### HTTP Headers
 
-Todas as chamadas da API Integração Remota | Cielo LIO Order Manager necessitam que as informações abaixo estejam presentes no Header na requisição:
+Todas as chamadas da API Integração Remota Cielo LIO Order Manager necessitam que as informações abaixo estejam presentes no Header na requisição:
 
 **Client-Id**: Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna “Client ID”, dentro do menu “Desenvolvedor” -> “Client ID Cadastrados”.
 
