Add Status de pedido - API Docs

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -295,6 +295,12 @@ Todas as chamadas da API Integração Remota Cielo LIO Order Manager necessitam 
 | 429  | Too Many Requests  | O consumidor estourou o limite de requisições por tempo.  |
 | 500  | Internal Server Error  | Erro não esperado; algo está quebrado na API  |
 
+### Status de pedido
+
+Abaixo é apresentada uma máquina de estados, com os possíveis estados que um pedido pode assumir desde o momento de sua criação até o seu término:
+
+![status do pedido](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/diagrama-lifecycle-new.png)
+
 # Integração Local
 
 ## Apresentação
