Add Entidades, Order

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -301,6 +301,26 @@ Abaixo é apresentada uma máquina de estados, com os possíveis estados que um 
 
 ![status do pedido](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/diagrama-lifecycle-new.png)
 
+### Entidades
+
+#### Order
+
+A Order é uma representação de um pedido para a venda de um ou mais produtos e/ou serviços. É fundamental que exista uma Order para que um pagamento seja realizado na Cielo LIO.
+
+| Campo  |  Tipo | Descrição  | Obrigatório  |
+|--------|-------|------------|--------------|
+| id  |  Texto |  UUID que identifica unicamente o pedido. | Sim  |
+| number  | Texto  | Número do pedido. Geralmente, esse número representa o identificador do pedido em um sistema externo através da integração com parceiros.  | Não  |
+|  reference |  Texto | Referência do pedido. Utilizada para facilitar o acesso ou a localização do mesmo.  |  Não |
+| status  | Texto  | Status do pedido (ENTERED, RE-ENTERED, PAID, CANCELED e CLOSED).  |  Sim |
+| created_at  | Texto  | Data de criação do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).  | Sim  |
+| updated_at  |  Texto | Data da última atualização do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).  | Sim  |
+| items  |Lista (Order Item)   | Lista de itens contidos no pedido.  |  Sim |
+|  notes | Texto  | Campo disponível para uso do Merchant para comunicação.  | Não  |
+| transactions  | Lista (Transaction)|  Lista de transações de pagamento (ou outros tipos) efetuadas no pedido. | Sim  |
+| price  | Número  |  Valor total do pedido. Exemplo: O valor de R$ 10,00 é representado como 1000. |  Sim |
+|  remaining |  Número |Valor restante do pagamento do pedido. Exemplo: O valor de R$ 10,00 é representado como 1000.   |  Sim |
+
 # Integração Local
 
 ## Apresentação
