--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -337,6 +337,25 @@ O Order Item é uma representação dos itens presentes em uma Order. É obrigat
 |created_at|Texto|Data de criação do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).|Não|
 | updated_at | Texto | Data de última atualização do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z). | Sim |
 
+#### Transaction
+
+A Transaction é uma representação com todos os pagamentos que foram realizados em uma Order. O objetivo é utilizá-la para consultar os pagamentos (transactions) que foram efetuados em uma Order.
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|Texto|"UUID que identifica unicamente a transação.|Sim|
+|transaction_type|Texto|Tipo da transação (PAYMENT e CANCELLATION).|Sim|
+|status|Texto|Status da transação (CONFIRMED, PENDING e CANCELLED).|Sim|
+|description|Texto|Descrição da transação.|Não|
+|terminal_number|Número|Número do terminal da Cielo LIO em que o pagamento foi realizado.|Sim|
+|card|Card (Card)|Informações sobre o cartão utilizado na transação.|Sim|
+|number|Número|Número Sequencial Único (NSU) da transação.|Sim|
+|authorization_code|Número|Código de autorização da transação.|Sim|
+|payment_product|Payment Product (Payment Product)|Informações sobre o produto de pagamento utilizado.|Sim|
+|amount|Número|Valor da transação. Exemplo: O valor de R$ 10,00 é representado como 1000.|Sim|
+|created_at|Texto|Data de criação do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).|Sim|
+|updated_at|Texto|Data de última atualização do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).|Sim|
+
 # Integração Local
 
 ## Apresentação
