Fix Entidades, Transaction

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -343,7 +343,7 @@ A Transaction é uma representação com todos os pagamentos que foram realizado
 
 |Campo|Tipo|Descrição|Obrigatório|
 |-----|----|---------|-----------|
-|id|Texto|"UUID que identifica unicamente a transação.|Sim|
+|id|Texto|"UUID" que identifica unicamente a transação.|Sim|
 |transaction_type|Texto|Tipo da transação (PAYMENT e CANCELLATION).|Sim|
 |status|Texto|Status da transação (CONFIRMED, PENDING e CANCELLED).|Sim|
 |description|Texto|Descrição da transação.|Não|
