Add Entidades, Card

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -356,6 +356,16 @@ A Transaction é uma representação com todos os pagamentos que foram realizado
 |created_at|Texto|Data de criação do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).|Sim|
 |updated_at|Texto|Data de última atualização do pedido. A data deve estar no formato: YYYY-MM-DDThh:mm:ssZ (Exemplo: 20151020T13:13:29.000Z).|Sim|
 
+#### Card
+
+O Card é uma representação do cartão que foi utilizado para realizar o pagamento/transação.
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|brand|Texto|Bandeira do cartão (VISA e MASTER).|Sim|
+|bin|Número|Bin (primeiros 6 dígitos) do cartão.|Sim|
+|last|Número|Last (últimos 4 dígitos) do cartão.|Sim|
+
 # Integração Local
 
 ## Apresentação
