Add Entidades, Payment Product

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -366,6 +366,17 @@ O Card é uma representação do cartão que foi utilizado para realizar o pagam
 |bin|Número|Bin (primeiros 6 dígitos) do cartão.|Sim|
 |last|Número|Last (últimos 4 dígitos) do cartão.|Sim|
 
+#### Payment Product
+
+O Payment Product é uma representação da forma de pagamento utilizada para realizar um pagamento.
+Ex.: Crédito, Débito, etc.
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|number|Texto|Identificação numérica do produto primário da Cielo.|Sim|
+|name|Número|Nome do produto primário utilizado.|Sim|
+|sub|Número|Produto secundário.|Sim|
+
 # Integração Local
 
 ## Apresentação
