--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -377,6 +377,16 @@ Ex.: Crédito, Débito, etc.
 |name|Número|Nome do produto primário utilizado.|Sim|
 |sub|Número|Produto secundário.|Sim|
 
+#### Sub Payment Product
+
+O Sub Payment Product é uma representação com o complemento da forma de pagamento utilizada para realizar um pagamento.
+Ex.: À Vista, Parcelado, etc.
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|number|Texto|Identificação numérica do produto primário da Cielo.|Sim|
+|name|Número|Nome do produto primário utilizado.|Sim|
+
 # Integração Local
 
 ## Apresentação
