Add Recursos, POST

--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -387,6 +387,78 @@ Ex.: À Vista, Parcelado, etc.
 |number|Texto|Identificação numérica do produto primário da Cielo.|Sim|
 |name|Número|Nome do produto primário utilizado.|Sim|
 
+### Recursos
+
+#### POST
+
+**Criar um pedido**
+
+Esse recurso realiza a criação de um pedido no servidor do Order Manager.
+
+> Endpoint:
+> 
+> **POST** */orders*
+												
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|order|Order|Informações do pedido.|Sim|
+
+Exemplo de requisição:
+
+```json
+{
+    "number": "0992f1d5cee540d9a9648f4d6a9e4aa6",
+    "reference": "PEDIDO #1234",
+    "status": "DRAFT",
+    "items": [{
+            "sku": "ede8f84a8b8645cb8e576a593c25c6ed",
+            "name": "produto 1",
+            "unit_price": 500,
+            "quantity": 2,
+            "unit_of_measure": "EACH"
+        },
+        {
+            "sku": "c2f5fb9a5542406e8b7917892329cda8",
+            "name": "produto 2",
+            "unit_price": 1500,
+            "quantity": 3,
+            "unit_of_measure": "EACH"
+        },
+        {
+            "sku": "b2j4bn6j93461385r5n90453407hjk0",
+            "name": "produto 3",
+            "unit_price": 550,
+            "quantity": 3,
+            "unit_of_measure": "EACH"
+        },
+        {
+            "sku": "55329cda842406e8cv2f5gdf96985152d",
+            "name": "produto 4",
+            "unit_price": 2005,
+            "unit_of_measure": "EACH"
+        }
+    ],
+    "notes": "Mesa 1",
+    "price": 9155
+}
+```
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|body|Identificador do pedido.|Sim|
+
+Exemplo de resposta:
+
+```json
+{
+    "id": "2e1d7b07-dcee-4a09-8d09-3bb02d94169d"
+}
+```
+
 # Integração Local
 
 ## Apresentação
