--- a/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
+++ b/_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md
@@ -693,18 +693,20 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
-    compile 'com.cielo.lio:order-manager:0.15.0'
+> compile 'com.cielo.lio:order-manager:0.15.0'
 
 ### Credenciais
 
 Para utilizar o Cielo LIO Order Manager SDK, é necessário inserir as seguintes credenciais na inicialização do OrderManager:
 
+```json
     // Criação das credenciais. Não se esquecer de substituir
     // Client-Id e Access-Token por suas credenciais. 
     
     Credentials credentials = new Credentials("Client-Id", "Access-Token"); 
     
     orderManager = new OrderManager(credentials, context);
+```
 
 * Client-Id
 Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna Client ID, dentro do menu 'Desenvolvedor' -> 'Client ID Cadastrados'.
@@ -741,7 +743,9 @@ Este método permite iniciar o OrderManager, que é responsável pelas principai
 
 Tudo começa com a criação do OrderManager!
 
-    orderManager = new OrderManager(credentials, context);
+```json
+orderManager = new OrderManager(credentials, context);
+```
 
 O construtor do OrderManager recebe 2 parâmetros:
 
@@ -756,6 +760,7 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 Com este método – Bind –, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
 
+```json
     ServiceBindListener serviceBindListener = new ServiceBindListener() {
         @Override
         public void onServiceBound() {
@@ -768,6 +773,7 @@ Com este método – Bind –, é possível vincular o contexto da aplicação a
         }
     }; 
     orderManager.bind(contextActivity, serviceBindListener);
+```
 
 O método Bind recebe dois parâmetros:
 
@@ -783,7 +789,9 @@ A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um
 
 Este método permite criar uma Order (classe Order). Para realizar essa criação, utilize o método createDraftOrder, que disponibilizará uma Order com status DRAFT:
 
-    Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
+```json
+Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
+```
 
 ### Adicionar itens em um pedido
 
@@ -791,6 +799,7 @@ Este método permite que sejam adicionados itens em um pedido.
 
 > **Atenção:** É necessário adicionar no mínimo um item a um pedido para que seja possível dar continuidade ao pagamento.
 
+```json
     // Identificação do produto (Stock Keeping Unit)
     String sku = "2891820317391823";
     String name = "Coca-cola lata";
@@ -803,12 +812,15 @@ Este método permite que sejam adicionados itens em um pedido.
     unityOfMeasure = "UNIDADE";
     
     order.addItem(sku, name, unitPrice, quantity, unityOfMeasure);
+```
 
 ### Liberar pedido para pagamento
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
 
-    orderManager.placeOrder(order);
+```json
+orderManager.placeOrder(order);
+```
 
 Após a execução desse método, o status da Order irá trocar de DRAFT para ENTERED, permitindo que a mesma seja paga.
 
@@ -817,6 +829,7 @@ Iniciar processo de pagamento
 
 Este método permite iniciar o processo de pagamento na Cielo LIO.
 
+```json
     PaymentListener paymentListener = new PaymentListener() {
                 @Override
                 public void onStart() {
@@ -842,6 +855,7 @@ Este método permite iniciar o processo de pagamento na Cielo LIO.
     long value = order.getPrice();
     
     orderManager.checkoutOrder(orderId, value, paymentListener);
+```
 
 ## Processo de Pagamento
 
@@ -853,7 +867,6 @@ Existem 4 formas diferentes de chamar o método checkoutOrder:
 
 No Pagamento parcial, o valor do pagamento é informado dentro do fluxo de telas da Cielo LIO. Na sequência, o fluxo de pagamento da Cielo LIO é iniciado (inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail o comprovante).
 
-    orderManager.checkoutOrder(orderId, paymentListener);
 
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
